@@ -1,18 +1,18 @@
 # Minitrino
 
 A command line tool that makes it easy to run modular Trino environments
-locally. Compatible with Staburst version 354-e and later.
+locally. Compatible with Starburst versions 370-e and later.
 
 [![PyPI
 version](https://badge.fury.io/py/minitrino.svg)](https://badge.fury.io/py/minitrino)
 [![Build
-Status](https://travis-ci.org/jefflester/minitrino.svg?branch=master)](https://app.travis-ci.com/jefflester/minitrino.svg?branch=master)
+Status](https://app.travis-ci.com/jefflester/minitrino.svg?branch=master)](https://app.travis-ci.com/jefflester/minitrino)
 [![Trino
 Slack](https://img.shields.io/static/v1?logo=slack&logoColor=959DA5&label=Slack&labelColor=333a41&message=join%20conversation&color=3AC358)](https://trinodb.io/slack.html)
 
 -----
 
-**Latest Stable Release**: 2.0.2
+**Latest Stable Release**: 2.0.3
 
 -----
 
@@ -38,10 +38,8 @@ Slack](https://img.shields.io/static/v1?logo=slack&logoColor=959DA5&label=Slack&
     - [Display Minitrino Versions](#display-minitrino-versions)
     - [Pointing the CLI to the Minitrino Library](#pointing-the-cli-to-the-minitrino-library)
   - [Minitrino Configuration File](#minitrino-configuration-file)
-    - [[CLI] Section](#cli-section)
-    - [[DOCKER] Section](#docker-section)
-    - [[TRINO] Section](#trino-section)
-    - [[MODULES] Section](#modules-section)
+    - [\[CLI\] Section](#cli-section)
+    - [\[MODULES\] Section](#modules-section)
   - [Project Structure](#project-structure)
     - [Trino Dockerfile](#trino-dockerfile)
   - [Adding New Modules (Tutorial)](#adding-new-modules-tutorial)
@@ -59,7 +57,7 @@ Slack](https://img.shields.io/static/v1?logo=slack&logoColor=959DA5&label=Slack&
     - [Customizing Images](#customizing-images)
     - [Bootstrap Scripts](#bootstrap-scripts)
       - [Installing Shell Packages for Bootstrap Scripts](#installing-shell-packages-for-bootstrap-scripts)
-    - [Managing Trino's `config.properties` File](#managing-trinos-configproperties-file)
+    - [Managing Trino's `config.properties` and `jvm.config` Files](#managing-trinos-configproperties-and-jvmconfig-files)
   - [Troubleshooting](#troubleshooting)
   - [Reporting Bugs and Contributing](#reporting-bugs-and-contributing)
 
@@ -163,14 +161,14 @@ Sample `provision` commands:
 
 ```bash
 minitrino provision \
-  --module hive-s3 \
+  --module hive \
   --module elasticsearch \
   --module ldap \
   --docker-native '--build --force-recreate'
 
-minitrino provision -m hive-s3 -m elasticsearch -m ldap
+minitrino provision -m hive -m elasticsearch -m ldap
 
-minitrino --env STARBURST_VER=332-e.6 provision
+minitrino --env STARBURST_VER=411-e provision
 ```
 
 The `provision` command constructs a Docker Compose command and executes it in
@@ -180,7 +178,7 @@ the host shell. The commands look similar to:
 ENV_VAR_1=SOMETHING ENV_VAR_2=SOMETHING ENV_VAR_3=${ENV_VAR_3} ... \
 docker-compose -f docker-compose.yml \
   -f modules/catalog/elasticsearch/elasticsearch.yml \
-  -f modules/catalog/hive-s3/hive-s3.yml \
+  -f modules/catalog/hive/hive.yml \
   -f modules/security/ldap/ldap.yml \
   up -d
 ```
@@ -337,7 +335,7 @@ Sample `snapshot` commands:
 minitrino snapshot --name t-2533
 
 # Take a snapshot of specific modules:
-minitrino snapshot -n super-cool-env -m hive-s3 -m elasticsearch -m ldap
+minitrino snapshot -n super-cool-env -m hive -m elasticsearch -m ldap
 ```
 
 ### Manage User Configuration
@@ -437,64 +435,39 @@ this file each serve a separate purpose.
 
 These configs allow the user to customize the behavior of Minitrino.
 
-- LIB_PATH: The filesystem path of the Minitrino library (specifically to the
+- `LIB_PATH`: The filesystem path of the Minitrino library (specifically to the
   `lib/` directory).
-- TEXT_EDITOR: The text editor to use with the `config` command, e.g. "vi",
+- `TEXT_EDITOR`: The text editor to use with the `config` command, e.g. "vi",
   "nano", etc. Defaults to the shell's default editor.
-
-### [DOCKER] Section
-
-These configs allow the user to customize how Minitrino uses Docker.
-
-- DOCKER_HOST: A URL pointing to an accessible Docker host. This is
-  automatically detected by Docker otherwise.
-
-### [TRINO] Section
-
-These configs allow the user to propagate config to the Trino container. Since
-many modules can append to Trino's core files, the supported way to make
-propagate changes to these Trino files is with these configs.
-
-- CONFIG: Configuration for Trino's `config.properties` file.
-- JVM_CONFIG: Configuration for Trino's `jvm.config` file.
-
-A multiline example of this section (note the indentation):
-
-```
-[TRINO]
-CONFIG=
-    query.max-memory-per-node=500MB
-    query.max-total-memory-per-node=500MB
-JVM_CONFIG=
-    -Dsun.security.krb5.debug=true
-```
 
 ### [MODULES] Section
 
-This section sets environment variables passed to containers provisioned by
-Minitrino. Environment variables are only passed to a container if the variable
-is specified in the module's `docker-compose.yml` file.
+This section has only one default config: `STARBURST_LIC_PATH`. This is required
+if using licensed Starburst Enterprise features. It can point to any valid
+license on your filesystem.
 
-Variables propagated to the Trino container are supported by Trino secrets.
+This section can also be used to set environment variables passed to containers
+provisioned by Minitrino. Environment variables are only passed to a container
+if the variable is specified in the module's `docker-compose.yml` file.
 
-- STARBURST_LIC_PATH: Required if using licensed Starburst Enterprise Trino
-  features. It can point to any valid license on your filesystem.
-- S3_ENDPOINT
-- S3_ACCESS_KEY
-- S3_SECRET_KEY
-- AWS_REGION
-- SNOWFLAKE_DIST_CONNECT_URL
-- SNOWFLAKE_DIST_CONNECT_USER
-- SNOWFLAKE_DIST_CONNECT_PASSWORD
-- SNOWFLAKE_DIST_WAREHOUSE
-- SNOWFLAKE_DIST_DB
-- SNOWFLAKE_DIST_STAGE_SCHEMA
-- SNOWFLAKE_JDBC_CONNECT_URL
-- SNOWFLAKE_JDBC_CONNECT_USER
-- SNOWFLAKE_JDBC_CONNECT_PASSWORD
-- SNOWFLAKE_JDBC_WAREHOUSE
-- SNOWFLAKE_JDBC_DB
-- SNOWFLAKE_JDBC_STAGE_SCHEMA
+For example, if your `minitrino.cfg` config file contains this variable:
+
+```bash
+DB_PASSWORD=password123
+```
+
+And your `docker-compose.yml` file contains this:
+
+```yaml
+services:
+  trino:
+    environment:
+      DB_PASSWORD: "${DB_PASSWORD}"
+```
+
+Then `DB_PASSWORD` is accessible inside of the resulting Trino container in the
+form of a shell environment variable. This functionality can be applied to any
+container as long as the above is followed.
 
 -----
 
@@ -518,6 +491,8 @@ lib
 ├── docker-compose.yml
 ├── minitrino.env
 ├── modules
+│   ├── admin
+│   │   └── ...
 │   ├── catalog
 │   │   └── postgres
 │   │       ├── metadata.json
@@ -529,18 +504,8 @@ lib
 │   │           └── trino
 │   │               └── postgres.properties
 │   ├── resources
-│   │   └── wait-for-it.sh
 │   └── security
-│       └── event-logger
-│           ├── event-logger.yml
-│           ├── metadata.json
-│           ├── readme.md
-│           └── resources
-│               ├── event-logger
-│               │   └── postgres.env
-│               └── trino
-│                   ├── event-listener.properties
-│                   └── postgres_event_logger.properties
+│       └── ...
 ├── snapshots
 └── version
 ```
@@ -671,15 +636,18 @@ In `lib/modules/catalog/postgres/`, add the `metadata.json` file:
 bash -c 'cat << EOF > metadata.json
 {
   "description": "Creates a Postgres catalog using the standard Postgres connector.",
-  "incompatibleModules": []
+  "incompatibleModules": [],
+  "dependentModules": []
 }
 EOF'
 ```
 
-The metadata file is presentable to the user via the `modules` command, and the
+The metadata file is presentable to the user via the `modules` command. The
 `incompatibleModules` key restricts certain modules from being provisioned
 alongside the given module. The `*` wildcard is a supported convention if the
-module is incompatible with all other modules.
+module is incompatible with all other modules. Lastly, the `dependentModules`
+key can be used to require other pre-defined modules to provision alongside the
+module containing the `metadata.json` file.
 
 ### Add a Readme File
 
@@ -779,7 +747,7 @@ Labels should be defined in pairs of two. The convention is:
     component when necessary.
 
 In Compose files where multiple services are defined, all services should be
-labeled with the same label sets (see `hive-s3.yml` for an example).
+labeled with the same label sets (see `hive.yml` for an example).
 
 -----
 
@@ -890,47 +858,30 @@ releases.
 To add the necessary package, simply update shell dependencies in
 `lib/dockerfile-resources/configure.sh`.
 
-### Managing Trino's `config.properties` File
+### Managing Trino's `config.properties` and `jvm.config` Files
 
 Many modules can change the Trino `config.properties` and `jvm.config` files.
 Because of this, there are two supported ways to modify these files with
 Minitrino.
 
-The first way is by setting the `CONFIG` variable in your `minitrino.cfg` file.
-This will propagate the config to the Trino container when it is provisioned.
+The first way is by setting the relevant environment variables in your
+`module.yml` Docker Compose file. This will propagate the configs to the Trino
+container when it is provisioned. For example:
 
-Generally speaking, this can be used for any type of configuration (i.e. memory
-configuration) that is unlikely to be modified by any module. This also applies
-to the `jvm.config` file, which has identical support via the `JVM_CONFIG`
-variable. If there are duplicate configs in either file, Minitrino will warn the
-user.
-
-To set these configs, your configuration file should look like:
-
-```
-[TRINO]
-CONFIG=
-    query.max-memory-per-node=500MB
-    query.max-total-memory-per-node=500MB
-JVM_CONFIG=
-    -Dsun.security.krb5.debug=true
+```yaml
+trino:
+  environment:
+    CONFIG_PROPERTIES: |-
+      insights.jdbc.url=jdbc:postgresql://postgresdb:5432/insights
+      insights.jdbc.user=admin
+      insights.jdbc.password=password
+      insights.persistence-enabled=true
+    JVM_CONFIG: |-
+      -Xlog:gc:/var/log/sep-gc-%t.log:time:filecount=10
 ```
 
-The second way to modify core Trino configuration is via module bootstrap
-scripts. This method is utilized by modules that need to make module-specific
-changes to Trino files. An example bootstrap snippet can be found below:
-
-```bash
-#!/usr/bin/env bash
-
-set -euxo pipefail
-
-echo "Adding Trino configs..."
-cat <<EOT >> /etc/starburst/config.properties
-query.max-stage-count=105
-query.max-execution-time=1h
-EOT
-```
+The second way to modify these configuration files is via module [bootstrap
+scripts](#bootstrap-scripts).
 
 -----
 
@@ -953,7 +904,7 @@ EOT
   - `minitrino down`
   - `minitrino -v remove --volumes` to remove **all** existing Minitrino
     volumes. Alternatively, run `minitrino -v remove --volumes --label <your
-    label>` to specifiy a specific module for which to remove volumes. See the
+    label>` to specify a specific module for which to remove volumes. See the
     [removing resources](#removing-resources) section for more information.
 
 If none of these troubleshooting tips help to resolve your issue, [please file a
